# pp_manager

./: .gitignore  Cargo.toml  MULTI-PROCESS-TESTING.md  README-TAURI.md  README.md  USAGE.md  VALIDATION-CHECKLIST.md  config.toml  create-png-icon.py  index.html  package-lock.json  package.json  test-build.ps1  test-multiple-processes.bat  test-multiple-processes.ps1
src/: App.vue  main.rs  process_manager.rs  style.css
src-tauri/: Cargo.toml  build.rs  config.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: main.rs  process_manager.rs
