[package]
name = "pp-manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [], default-features = false }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
chrono = { workspace = true }
toml = { workspace = true }

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = [
    "winuser",
    "processthreadsapi",
    "handleapi",
    "tlhelp32",
    "winnt",
    "errhandlingapi",
    "consoleapi",
    "winbase",
    "psapi",
    "securitybaseapi",
    "winerror",
    "sysinfoapi",
] }
